# pico-usb-midi-processor

./: .gitmodules  CMakeLists.txt  README.md  backup_view.cpp  backup_view.h  clock_set_view.cpp  clock_set_view.h  home_screen.cpp  home_screen.h  midi_app.c  midi_processing_setup_screen.cpp  midi_processing_setup_screen.h  midi_processor.h  midi_processor_chan_button_remap.h  midi_processor_chan_mes_remap.cpp  midi_processor_chan_mes_remap.h  midi_processor_chan_mes_remap_settings_view.cpp  midi_processor_chan_mes_remap_settings_view.h  midi_processor_element.h  midi_processor_factory.cpp  midi_processor_factory.h  midi_processor_manager.cpp  midi_processor_manager.h  midi_processor_mc_fader_pickup.cpp  midi_processor_mc_fader_pickup.h  midi_processor_mc_fader_pickup_settings_view.cpp  midi_processor_mc_fader_pickup_settings_view.h  midi_processor_model.cpp-backup  midi_processor_model.h  midi_processor_settings_view.h  midi_processor_setup_screen.cpp  midi_processor_setup_screen.h  midi_processor_transpose.cpp  midi_processor_transpose.h  midi_processor_transpose_view.cpp  midi_processor_transpose_view.h  pico-usb-midi-processor.cpp  preset_view.cpp  preset_view.h  restore_view.cpp  (+11 more)
doc/: TUTORIAL.md
ext_lib/: README.md
ext_lib/RPi-Pico-SSD1306-library/: README.md  font.hpp
ext_lib/fatfs/source/: diskio.h  ffconf.h
ext_lib/ssd1306/src/: driver_ssd1306_font.h
lib/rp2040_rtc/: rp2040_rtc.h
